tests/codegen/errors/reader/numeric-literals/atom.reader.error.reader.radix.missing.digits/reader-radix-missing-digits.mon
;; TEST-ID: tests.codegen.reader-error.reader-radix-missing-digits
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/numeric-literals
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: expected digits after radix prefix '2r'
;; TEST-ATOM: atom.reader.error.reader.radix.missing.digits
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.radix.missing.digits
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: expected digits after radix prefix '2r'
;; TEST-READER-PATH: reader.c:1541 lexer.radix
;; TEST-CODEGEN-PATH: diagnostic.lexer.radix
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1541 expected digits after radix prefix '2r'
;; TEST-USES-ATOM: atom.reader.error.reader.radix.missing.digits
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.lexer.radix
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/numeric-literals/atom.reader.error.reader.radix.missing.digits
;; TEST-MENU-PATH: codegen/errors/reader/numeric-literals/atom.reader.error.reader.radix.missing.digits
;; TEST-ATOM-LEAF: atom.reader.error.reader.radix.missing.digits
;; TEST-CLI-TARGET: codegen errors reader numeric-literals

(module Main)
(show 2r)
